--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "rss-school, node course, task 1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
